2008-05-29  Ivan N. Zlatev  <contact@i-nz.net>

	* GridItemCollection.cs: Revert my multiple items with same 
	name patch.

2008-05-28  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ScrollBar.cs: Scrollbars should only react to left-clicks, not right
	or middle ones.
	Fixes part of #393908.

2008-05-28  Jonathan Pobst  <monkey@jpobst.com>

	* ToolStripDrowDown.cs: When using the Show () methods that have a
	Control parameter, set the menu owner to that Control.
	[Fixes bug #394345]

2008-05-28  Ivan N. Zlatev  <contact@i-nz.net>

	* PropertyGridTextBox.cs, PropertyGridView.cs: Implement validation.
	[Fixes bug #362756]

2008-05-27  Ivan N. Zlatev  <contact@i-nz.net>

	* GridItemCollection.cs: Refactor to support multiple items with the 
	same name.
	[Fixes bug #394314]

2008-05-27  Jonathan Pobst  <monkey@jpobst.com>

	* Control.cs: The 2.0 check for illegal cross thread calls in 
	Control.Handle were throwing an exception when we were getting
	the Handle in order to invoke correctly.  Created a private
	version that does not contain this check.
	[Fixes bug #394531]

2008-05-27  Ivan N. Zlatev  <contact@i-nz.net>

	* PropertyGrid.cs: Respect DefaultTabType.

2008-05-27  Ivan N. Zlatev  <contact@i-nz.net>

	* ListView.cs: SPACE selects an item.
	[Fixes bug #393023]

2008-05-27  Ivan N. Zlatev  <contact@i-nz.net>

	* ListView.cs: Reset the search string whenever the items are 
	modified.
 	[Fixes bug #393020]

2008-05-25  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListControl.cs: For the first added item PositionChanged is fired
	_before_ ItemChanged, which leave us in a temporary invalid state - so
	we need to set the selected index from ItemChanged handler *if* we
	know that the first item has just been added *and* the items have been
	actually added to the ListControl.
	Fixes #369048.

2008-05-24  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* TabControl.cs: Only clicks with the left button should be
	handled.
	Fixes #393908.
